# cc-embed-data

./: BUILD  MODULE.bazel  README.md
cc_embed_data/: BUILD  cc_embed_data.bzl  make_emebed_data.cc
tests/: BUILD  cc_embed_data_example_test.cc  cc_embed_data_short_emebed_data.gold.cc  cc_embed_data_short_emebed_data.gold.h  cc_embed_data_short_test.cc  cc_embed_data_test.bzl  names_main.cc
tests/testdata2/: BUILD
