module(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.3",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "com_github_bcsgh_build_test",
    version = "0.0.1",
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
)

bazel_dep(
    name = "jsoncpp",
    version = "1.9.6",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)
